fix spacing issues in full bio

--- a/src/index.css
+++ b/src/index.css
@@ -49,10 +49,10 @@ h3 {
 }
 
 #us{
-  max-width: 15%;
-  max-height: 15%;
+  max-width: 115%;
+  max-height: 100%;
   margin: auto;
-  display: block;
+  display: inline;
 }
 
 #about{
@@ -125,6 +125,6 @@ width: 100%;
     99%{    color:transparent;  }
     100%{   color: #000;    }
 }
-#bio-text {
+.bio-text {
   text-align: left;
 }
